--- a/gb/21/5/11/n12938327.md
+++ b/gb/21/5/11/n12938327.md
@@ -1,66 +1,71 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/enugbt354/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/enugbt354/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/enugbt354/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/enugbt354/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/enugbt354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/enugbt354/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/enugbt354/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/enugbt354/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/enugbt354/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/enugbt354/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/enugbt354/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/enugbt354/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/enugbt354/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/enugbt354/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/enugbt354/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/enugbt354/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/enugbt354/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/enugbt354/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/enugbt354/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/enugbt354/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/enugbt354/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/enugbt354/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/enugbt354/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/enugbt354/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>最新世界大学排名  加拿大四所大学挤身前100</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>最新世界大学排名 加拿大四所大学挤身前100</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12938348-can_ubc-1-600x400.jpg" />
 <h6>卑诗大学（UBC）和亚伯塔大学（ University of Alberta）分别在全球大学排名中排第48位和第81位，总体得分超过82分。图为卑诗大学。（Darryl Dyck/加通社）
 </h6>
 <hr>
-<p>【大纪元2021年05月11日讯】（大纪元记者王兰多伦多报导）当谈到2021-2022年世界上最好的大学时，加拿大大学真是令人印象深刻！世界<ahref="https://github.com/enugbt354/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6%E6%8E%92%E5%90%8D.md#1">大学排名</a>中心（CWUR）在对19,788所高等院校进行排名之后，有四所加拿大大学跻身全球前100名。</p>
+<p>【大纪元2021年05月11日讯】（大纪元记者王兰多伦多报导）当谈到2021-2022年世界上最好的大学时，加拿大大学真是令人印象深刻！世界<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6%E6%8E%92%E5%90%8D.md#1">大学排名</a>中心（CWUR）在对19,788所高等院校进行排名之后，有四所加拿大大学跻身全球前100名。</p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow: hidden;"><a style="width: 100%; height: 170px;" src="https://player.captivate.fm/episode/e2b517c4-3146-4769-bdf8-edb806243289" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
 <p>据Narcity报导，在创建2,000强排名时，CWUR考虑了几个因素，包括教育质量、校友就业、研究表现和教师质量。</p>
 <p>虽然有42所加拿大高等教育机构进入了前2,000名单，但只有4所大学进入了世界最佳100强。</p>
 <p>与哈佛大学、斯坦福大学和剑桥大学等学校一起进入前25名的是多伦多大学，获得了87.5分(满分100分)的成绩。</p>
 <p>麦吉尔大学（McGill University）的排名也非常高，排名第27位，得分为87分。</p>
-<p>卑诗大学（UBC）和亚伯塔大学（ University of Alberta）分别排在第48位和第81位，均在<ahref="https://github.com/enugbt354/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6%E6%8E%92%E5%90%8D.md#1">大学排名</a>中总体得分超过82分。</p>
+<p>卑诗大学（UBC）和亚伯塔大学（ University of Alberta）分别排在第48位和第81位，均在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6%E6%8E%92%E5%90%8D.md#1">大学排名</a>中总体得分超过82分。</p>
 <p>虽然多伦多大学、麦吉尔大学和卑诗大学以前也曾跻身全球大学前100名，但对亚伯塔大学来说是一个飞跃，今年早些时候它在全球排名第138位。</p>
-<figure id="attachment_12938340" aria-describedby="caption-attachment-12938340" style="width: 830px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/05/id12938340-Capture.jpg"><img class=" wp-image-12938340" src="https://i.epochtimes.com/assets/uploads/2021/05/id12938340-Capture-600x198.jpg" alt="" width="830" b="274" /></a><figcaption id="caption-attachment-12938340" class="wp-caption-text">加拿大全球排名前200名学校。（CWUR）</figcaption></figure>
+<h2>加拿大入围全球排名前2000名学校：</h2>
+<figure id="attachment_12938340" aria-describedby="caption-attachment-12938340" style="width: 782px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/05/id12938340-Capture.jpg"><img class=" wp-image-12938340" src="https://i.epochtimes.com/assets/uploads/2021/05/id12938340-Capture-600x198.jpg" alt="" width="782" b="258" /></a><figcaption id="caption-attachment-12938340" class="wp-caption-text"><ahref="https://i.epochtimes.com/assets/uploads/2021/05/id12940312-Capture2.jpg"><img class="alignnone wp-image-12940312" src="https://i.epochtimes.com/assets/uploads/2021/05/id12940312-Capture2-600x268.jpg" alt="" width="770" b="344" /></a></figcaption></figure>
+<p><img class="alignnone wp-image-12940310" src="https://i.epochtimes.com/assets/uploads/2021/05/id12940310-Capture3-600x316.jpg" alt="" width="775" b="408" /></p>
+<p><img class=" wp-image-12940309" src="https://i.epochtimes.com/assets/uploads/2021/05/id12940309-Capture4-600x86.jpg" alt="" width="781" b="112" /></p>
+<p>全球大学最新排名点击<ahref="https://cwur.org/2021-22.php">这里</a>。</p>
 <p>责任编辑：严枫</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/enugbt354/djy/blob/master/gb/16/9/22/n8324122.md#1">全球最佳大学排名 英国牛津首次夺冠</a></li>
-<li><a href="https://github.com/enugbt354/djy/blob/master/gb/16/9/22/n8325589.md#1">泰晤士高教大学排名：澳洲多所大学上升</a></li>
-<li><a href="https://github.com/enugbt354/djy/blob/master/gb/16/9/29/n8350151.md#1">媒体自办大学排名 台成清交阳列前5</a></li>
-<li><a href="https://github.com/enugbt354/djy/blob/master/gb/16/10/27/n8437005.md#1">2017年《麦克林》加拿大大学排名出炉</a></li>
-<li><a href="https://github.com/enugbt354/djy/blob/master/gb/21/3/19/n12821163.md#1">加拿大各省最新疫情数据 （5月10日）</a></li>
-<li><a href="https://github.com/enugbt354/djy/blob/master/gb/21/5/10/n12937799.md#1">加国妻子：玉江山被中共关押多年 下落不明</a></li>
-<li><a href="https://github.com/enugbt354/djy/blob/master/gb/21/5/10/n12937919.md#1">注射疫苗后月经出现异常 专家解释原因</a></li>
-<li><a href="https://github.com/enugbt354/djy/blob/master/gb/21/5/10/n12937866.md#1">特鲁多政府酝酿 选举日次日收到选票仍算数</a></li>
-<li><a href="https://github.com/enugbt354/djy/blob/master/gb/21/5/10/n12937664.md#1">疫情下 如何延长合法逗留加拿大时间</a></li>
-<li><a href="https://github.com/enugbt354/djy/blob/master/gb/21/5/9/n12935312.md#1">加留学生类移民新项目 4万名额25小时报满</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/22/n8324122.md#1">全球最佳大学排名 英国牛津首次夺冠</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/22/n8325589.md#1">泰晤士高教大学排名：澳洲多所大学上升</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/29/n8350151.md#1">媒体自办大学排名 台成清交阳列前5</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/27/n8437005.md#1">2017年《麦克林》加拿大大学排名出炉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687158.md#1">卑诗省政府大量删除“过时”性别用语</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687147.md#1">加拿大经济一月份小幅增长0.2%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687086.md#1">渥京考虑对SUV和皮卡车额外征税</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687035.md#1">联邦审查Flair 加国廉航或失经营执照</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13684629.md#1">保守党：特鲁多2030年减排目标不现实</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684344.md#1">加拿大一元店今年将推出5元定价</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/enugbt354/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/11/13/n2327659.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/9/n9940966.md#1" target="_blank">高天韵：《共产主义的终极目的》是救世神书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12923553.md#1">《推背图》预言大戏尾声的丰碑事件</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12924345.md#1">【未解之谜】五台山之谜：清凉胜地的秘密</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/4/19/n12890234.md#1">日食及沙罗周期天象预言：中共生与灭</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12922723.md#1">【命理】哪一种命的人生最为舒适？</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12923727.md#1">儿子发狂与富家子败家皆有前因 结恶缘必尝恶果</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12931723.md#1">【未解之谜】科学聚焦：人的意念对植物有影响</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/10/n12937134.md#1">【微视频】川普行政令奏效 陆3大电讯公司被摘牌</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12932139.md#1">专访李南央：我的两本书《母亲》和《继母》（3）</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12932085.md#1">【新闻看点】中共敢攻台？美一大招北京真会慌</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12931918.md#1">梁朝伟拒演一部电影 成就周星驰的星爷地位</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12933638.md#1">【新闻看点】习加紧造神 高官知中共内情急退党</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12931918.md#1">梁朝伟拒演一部电影 成就周星驰的星爷地位</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12932241.md#1">李千那父亲演出到一半晕倒 送医动5小时手术</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12931731.md#1">打完疫苗24小时后发烧 赖铭伟停工返家休养</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/9/n12935234.md#1">吴尊庆母亲节晒妈妈照片 网友惊叹婆媳相像</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/9/n12935058.md#1">张艺谋自曝选角标准：拒用整容女星</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/6/n12927468.md#1">飞蚊症能治愈？2碗药膳 告别眼睛老化和飞蚊</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12923540.md#1">肾功能下降一半 可能没感觉！这些症状别轻忽</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/9/n12934031.md#1">美军新兵持枪劫持校车 被学童的提问击败</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12932504.md#1">美双胞胎姊妺申请大学 获2400万美元奖学金</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/9/n12933892.md#1">知名传染病专家打2剂疫苗 染疫离世 专家析原因</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/enugbt354/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/enugbt354/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/11/n12938327.htm">最新世界大学排名  加拿大四所大学挤身前100</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/11/n12938327.htm">最新世界大学排名 加拿大四所大学挤身前100</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/enugbt354/djy/blob/master/gb/21/5/11/n12938327.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/enugbt354/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/enugbt354/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/enugbt354/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/enugbt354/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/enugbt354/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/5/11/n12938327.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
